updated styles to fix a contrast error
updated styles to fix a contrast error

--- a/midtermProject/style.css
+++ b/midtermProject/style.css
@@ -1,6 +1,6 @@
 :root {
             /* Color Palette - 5 Core Colors */
-            --color-primary: #097969;     /* Blue Spruce - Main Brand Color */
+            --color-primary: #0CB098;     /* Ocean Mist - Main Brand Color */
             --color-secondary: #320d6d;   /* Indigo Ink - Complementary Action Color */
             --color-accent: #6320EE;      /* Electric Indigo - Highlight / Warning Color */
             --color-neutral: #171a21;     /* Ink Black - Neutral Text and Background */
